# rookify

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  config.example.osism.yaml  config.example.yaml  docker-compose.yml  mock.pickle  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: on-push-pre-commit.yml  on-push-pre-release.yml  on-push-test.yml  on-release-publish.yml  pre-commit.yml
docs/configuration-guide/: rookify.md
docs/deploy-guide/: rookify.md
docs/guides/configuration-guide/: rookify.md
docs/operations-guide/: rookify.md
osism/: check_local_rados_lib_installation.sh  reset_k3s.sh
scripts/: build_local_rookify.sh
scripts/osism/: get_osism_configs_from_testbed.sh
src/: config.example.yaml  rookify.py
src/modules/: __init__.py  module.py
src/modules/analyze_ceph/: __init__.py  main.py
src/modules/example/: __init__.py  main.py
src/modules/migrate_monitors/: __init__.py  main.py
src/modules/migrate_osds/: __init__.py  main.py
src/rookify/: __main__.py  config.schema.yaml  logger.py  yaml.py
src/rookify/modules/: __init__.py  ceph.py  exception.py  k8s.py  machine.py  module.py  ssh.py  template.py
src/rookify/modules/analyze_ceph/: __init__.py  main.py
src/rookify/modules/cephx_auth_config/: __init__.py  main.py
src/rookify/modules/create_cluster/: __init__.py  main.py
src/rookify/modules/create_configmap/: __init__.py  main.py
src/rookify/modules/create_rook_cluster/: main.py  (+1 more)
tests/: mock_ceph.py  mock_k8s.py  mock_k8s_prerequisite_check.py  mock_ssh_server.py  test_main.py  test_mock_ceph.py  test_mock_k8s.py  test_mock_ssh_server.py
tests/modules/: test_example.py  test_k8s_prerequisites_check.py
(+33 files in other folders)
