[metadata]
name = Rookify
description = Enable Ceph-Cluster migrations to Rook
long_description = Rookify is designed to facilitate a smooth and efficient transition for existing Ceph clusters to a Rook-managed Ceph cluster environment.
platforms = any
author = Sovereign Cloud Stack Developers
author_email = scs@osb-alliance.com
license = Apache
url = https://scs.community
classifiers =
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python
    Environment :: Console
    Topic :: System :: Clustering
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
install_requires=file:requirements.txt
